# Prism_

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  IKA_INTEGRATION.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: ika_client.rs  main.rs  rpc_light.rs
e2e/: prism-walkthrough.spec.ts  sovereign-command-motions.spec.ts  sovereign-mock-state.ts
move/: Move.toml  harmony_heart.move  hollow.move  prism.move
program/: Cargo.toml
program/src/: lib.rs
scripts/: build-sbf.ps1  prism-sign.ps1
src/: ChainSpectrum.tsx  Crystal.tsx  DWalletTools.tsx  PrismBeams.tsx  PrismCore3D.tsx  PrismDashboard.tsx  PrismGlyph.tsx  PrismLearn.tsx  PrismTrade.tsx  SignatureApprovalModal.tsx  SovereignCommand.tsx  app.tsx  boot.tsx  config.ts  index.css  main.tsx  prismSovereignIx.ts
src/dwallet/: cursorAgentPrompt.ts  index.ts  phantomWallet.ts  solanaConnection.ts  solanaGuide.ts  solanaOnChain.ts
src/hooks/: usePrismDaylight.ts
src/types/: jupiter-plugin.d.ts
voting/: Cargo.toml
voting/e2e/: Cargo.toml
voting/e2e/src/: main.rs
voting/src/: lib.rs
voting/tests/: mollusk.rs
